@@ -25,46 +25,57 @@ public final class TestConstants {
   private TestConstants() {}
 
   /* Account IDs */
-  public static final Long ACCOUNT_ONE_ID = 1L;
-  public static final Long ACCOUNT_TWO_ID = 2L;
-  public static final Long ACCOUNT_THREE_ID = 3L;
+  public static final Long TEST_ACCOUNT_ONE_ID = 1L;
+  public static final Long TEST_ACCOUNT_TWO_ID = 2L;
+  public static final Long TEST_ACCOUNT_THREE_ID = 3L;
 
   /* Account DTOs */
 
   public static final AccountDto TEST_ACCOUNT_DTO_ONE =
-      new AccountDto(ACCOUNT_ONE_ID, new BigDecimal("120.25"), Currency.GBP);
+      AccountDto.builder()
+          .id(TEST_ACCOUNT_ONE_ID)
+          .balance(new BigDecimal("120.25"))
+          .currency(Currency.GBP)
+          .build();
 
   public static final AccountDto TEST_ACCOUNT_DTO_TWO =
-      new AccountDto(ACCOUNT_TWO_ID, new BigDecimal("801.01"), Currency.IDR);
-
+          AccountDto.builder()
+                  .id(TEST_ACCOUNT_TWO_ID)
+                  .balance(new BigDecimal("801.01"))
+                  .currency(Currency.IDR)
+                  .build();
   public static final AccountDto TEST_ACCOUNT_DTO_THREE =
-      new AccountDto(
-          ACCOUNT_THREE_ID,
-          new BigDecimal("-51.00"),
-          Currency.USD); // Invalid value put here for testing.
+          AccountDto.builder()
+                  .id(TEST_ACCOUNT_THREE_ID)
+                  .balance(new BigDecimal("-51.00")) // Invalid value put here for testing.
+                  .currency(Currency.USD)
+                  .build();
 
   /* Accounts */
 
   public static final Account TEST_ACCOUNT_ONE =
-      new Account(
-          TEST_ACCOUNT_DTO_ONE.getId(),
-          TEST_ACCOUNT_DTO_ONE.getBalance(),
-          TEST_ACCOUNT_DTO_ONE.getCurrency(),
-          new Date(946083999988L));
+          Account.builder()
+                  .id(TEST_ACCOUNT_DTO_ONE.getId())
+                  .balance(TEST_ACCOUNT_DTO_ONE.getBalance())
+                  .currency(TEST_ACCOUNT_DTO_ONE.getCurrency())
+                  .createdAt( new Date(946083999988L))
+                  .build();
 
   public static final Account TEST_ACCOUNT_TWO =
-      new Account(
-          TEST_ACCOUNT_DTO_TWO.getId(),
-          TEST_ACCOUNT_DTO_TWO.getBalance(),
-          TEST_ACCOUNT_DTO_TWO.getCurrency(),
-          new Date(946083999989L));
+          Account.builder()
+                  .id(TEST_ACCOUNT_DTO_TWO.getId())
+                  .balance(TEST_ACCOUNT_DTO_TWO.getBalance())
+                  .currency(TEST_ACCOUNT_DTO_TWO.getCurrency())
+                  .createdAt( new Date(946083999989L))
+                  .build();
 
   public static final Account TEST_ACCOUNT_THREE =
-      new Account(
-          TEST_ACCOUNT_DTO_THREE.getId(),
-          TEST_ACCOUNT_DTO_THREE.getBalance(),
-          TEST_ACCOUNT_DTO_THREE.getCurrency(),
-          new Date(946083999990L));
+          Account.builder()
+                  .id(TEST_ACCOUNT_DTO_THREE.getId())
+                  .balance(TEST_ACCOUNT_DTO_THREE.getBalance())
+                  .currency(TEST_ACCOUNT_DTO_THREE.getCurrency())
+                  .createdAt( new Date(946083999990L))
+                  .build();
 
   /* Constant for relationship of Entity Models for Account DTOs */
 
@@ -105,70 +116,95 @@ public final class TestConstants {
 
   /* Transaction DTOs */
 
-  public static final TransactionDto TEST_TRANSACTION_DTO_ONE =
-      new TransactionDto(1L, ACCOUNT_ONE_ID, ACCOUNT_TWO_ID, new BigDecimal("20.01"), Currency.IDR);
+  public static final Long TEST_TRANSACTION_ONE_ID = 1L;
+  public static final Long TEST_TRANSACTION_TWO_ID = 2L;
+  public static final Long TEST_TRANSACTION_THREE_ID = 3L;
+  public static final Long TEST_TRANSACTION_FOUR_ID = 4L;
+  public static final Long TEST_TRANSACTION_FiVE_ID = 5L;
 
+
+  public static final TransactionDto TEST_TRANSACTION_DTO_ONE =
+          TransactionDto.builder()
+                  .id(TEST_TRANSACTION_ONE_ID)
+                  .sourceAccountId(TEST_ACCOUNT_ONE_ID)
+                  .targetAccountId(TEST_ACCOUNT_TWO_ID)
+                  .amount(new BigDecimal("20.01"))
+                  .currency(Currency.IDR)
+                  .build();
   public static final TransactionDto TEST_TRANSACTION_DTO_TWO =
-      new TransactionDto(
-          2L, ACCOUNT_ONE_ID, ACCOUNT_TWO_ID, new BigDecimal("19000.80"), Currency.IDR);
+          TransactionDto.builder()
+                  .id(TEST_TRANSACTION_TWO_ID)
+                  .sourceAccountId(TEST_ACCOUNT_ONE_ID)
+                  .targetAccountId(TEST_ACCOUNT_TWO_ID)
+                  .amount(new BigDecimal("19000.80"))
+                  .currency(Currency.IDR)
+                  .build();
 
   public static final TransactionDto TEST_TRANSACTION_DTO_THREE =
-      new TransactionDto(3L, ACCOUNT_ONE_ID, ACCOUNT_THREE_ID, BigDecimal.ZERO, Currency.USD);
-
+          TransactionDto.builder()
+                  .id(TEST_TRANSACTION_THREE_ID)
+                  .sourceAccountId(TEST_ACCOUNT_ONE_ID)
+                  .targetAccountId(TEST_ACCOUNT_THREE_ID)
+                  .amount(BigDecimal.ZERO) // Invalid value, put here for testing purposes.
+                  .currency(Currency.USD)
+                  .build();
   public static final TransactionDto TEST_TRANSACTION_DTO_FOUR =
-      new TransactionDto(
-          4L,
-          ACCOUNT_THREE_ID,
-          ACCOUNT_TWO_ID,
-          new BigDecimal("0.19"),
-          Currency
-              .AFA); // Currency different from target account's on purpose, to test for a relevant
-                    // Exception being thrown.
-
-  public static final TransactionDto TEST_TRANSACTION_FROM_ACCOUNT_TO_ITSELF =
-      new TransactionDto(
-          5L,
-          ACCOUNT_TWO_ID,
-          ACCOUNT_TWO_ID,
-          BigDecimal.TEN,
-          Currency.IDR); // Again, an instance only for testing.
+          TransactionDto.builder()
+                  .id(TEST_TRANSACTION_FOUR_ID)
+                  .sourceAccountId(TEST_ACCOUNT_THREE_ID)
+                  .targetAccountId(TEST_ACCOUNT_TWO_ID)
+                  .amount(new BigDecimal("0.19")) 
+                  .currency(Currency.AFA) // Currency different from target account's on purpose, to test for a relevant
+                                          // Exception being thrown.
+                  .build();
+  public static final TransactionDto TEST_TRANSACTION_DTO_FIVE =
+          TransactionDto.builder()
+                  .id(TEST_TRANSACTION_FiVE_ID)
+                  .sourceAccountId(TEST_ACCOUNT_TWO_ID)
+                  .targetAccountId(TEST_ACCOUNT_TWO_ID)  // From an account to itself, for testing purposes.
+                  .amount(BigDecimal.TEN)
+                  .currency(Currency.IDR)
+                  .build();
 
   /* Transactions */
 
   public static final Transaction TEST_TRANSACTION_ONE =
-      new Transaction(
-          TEST_TRANSACTION_DTO_ONE.getId(),
-          TEST_TRANSACTION_DTO_ONE.getSourceAccountId(),
-          TEST_TRANSACTION_DTO_ONE.getTargetAccountId(),
-          TEST_TRANSACTION_DTO_ONE.getAmount(),
-          TEST_TRANSACTION_DTO_ONE.getCurrency(),
-          new Date(946083999998L));
+          Transaction.builder()
+                  .id(TEST_TRANSACTION_DTO_ONE.getId())
+                  .sourceAccountId(TEST_TRANSACTION_DTO_ONE.getSourceAccountId())
+                  .targetAccountId(TEST_TRANSACTION_DTO_ONE.getTargetAccountId())
+                  .amount(TEST_TRANSACTION_DTO_ONE.getAmount())
+                  .currency(TEST_TRANSACTION_DTO_ONE.getCurrency())
+                  .submittedAt(new Date(946083999998L))
+                  .build();
+  
   public static final Transaction TEST_TRANSACTION_TWO =
-      new Transaction(
-          TEST_TRANSACTION_DTO_TWO.getId(),
-          TEST_TRANSACTION_DTO_TWO.getSourceAccountId(),
-          TEST_TRANSACTION_DTO_TWO.getTargetAccountId(),
-          TEST_TRANSACTION_DTO_TWO.getAmount(),
-          TEST_TRANSACTION_DTO_TWO.getCurrency(),
-          new Date(946083999999L));
-
+          Transaction.builder()
+                  .id(TEST_TRANSACTION_DTO_TWO.getId())
+                  .sourceAccountId(TEST_TRANSACTION_DTO_TWO.getSourceAccountId())
+                  .targetAccountId(TEST_TRANSACTION_DTO_TWO.getTargetAccountId())
+                  .amount(TEST_TRANSACTION_DTO_TWO.getAmount())
+                  .currency(TEST_TRANSACTION_DTO_TWO.getCurrency())
+                  .submittedAt(new Date(946083999999L))
+                  .build();
   public static final Transaction TEST_TRANSACTION_THREE =
-      new Transaction(
-          TEST_TRANSACTION_DTO_THREE.getId(),
-          TEST_TRANSACTION_DTO_THREE.getSourceAccountId(),
-          TEST_TRANSACTION_DTO_THREE.getTargetAccountId(),
-          TEST_TRANSACTION_DTO_THREE.getAmount(),
-          TEST_TRANSACTION_DTO_THREE.getCurrency(),
-          new Date(946084000000L));
-
+          Transaction.builder()
+                  .id(TEST_TRANSACTION_DTO_THREE.getId())
+                  .sourceAccountId(TEST_TRANSACTION_DTO_THREE.getSourceAccountId())
+                  .targetAccountId(TEST_TRANSACTION_DTO_THREE.getTargetAccountId())
+                  .amount(TEST_TRANSACTION_DTO_THREE.getAmount())
+                  .currency(TEST_TRANSACTION_DTO_THREE.getCurrency())
+                  .submittedAt(new Date(946084000000L))
+                  .build();
   public static final Transaction TEST_TRANSACTION_FOUR =
-      new Transaction(
-          TEST_TRANSACTION_DTO_FOUR.getId(),
-          TEST_TRANSACTION_DTO_FOUR.getSourceAccountId(),
-          TEST_TRANSACTION_DTO_FOUR.getTargetAccountId(),
-          TEST_TRANSACTION_DTO_FOUR.getAmount(),
-          TEST_TRANSACTION_DTO_FOUR.getCurrency(),
-          new Date(946084000001L));
+          Transaction.builder()
+                  .id(TEST_TRANSACTION_DTO_FOUR.getId())
+                  .sourceAccountId(TEST_TRANSACTION_DTO_FOUR.getSourceAccountId())
+                  .targetAccountId(TEST_TRANSACTION_DTO_FOUR.getTargetAccountId())
+                  .amount(TEST_TRANSACTION_DTO_FOUR.getAmount())
+                  .currency(TEST_TRANSACTION_DTO_FOUR.getCurrency())
+                  .submittedAt(new Date(946084000001L))
+                  .build();
 
   /* Entity Models over Transaction DTOs */
   public static final EntityModel<TransactionDto> TEST_TRANSACTION_DTO_ENTITY_MODEL_ONE =
@@ -248,7 +284,7 @@ public final class TestConstants {
               .withRel(ALL_TRANSACTIONS));
 
   /* Collection Models over Entity Models of Transaction DTOs */
-  
+
   public static final CollectionModel<EntityModel<TransactionDto>>
       TEST_ENTITY_MODEL_COLLECTION_MODEL_FULL =
           CollectionModel.of(
@@ -257,7 +293,10 @@ public final class TestConstants {
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_TWO,
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_THREE,
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_FOUR),
-                  linkTo(methodOn(TransactionController.class).getAllTransactions(Collections.emptyMap())).withSelfRel());
+              linkTo(
+                      methodOn(TransactionController.class)
+                          .getAllTransactions(Collections.emptyMap()))
+                  .withSelfRel());
 
   public static final CollectionModel<EntityModel<TransactionDto>>
       TEST_ENTITY_MODEL_COLLECTION_MODEL_FROM_ACCOUNT_ONE =
@@ -266,9 +305,15 @@ public final class TestConstants {
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_ONE,
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_TWO,
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_THREE),
-                  linkTo(methodOn(TransactionController.class).getAllTransactions(Map.of(SOURCE_ACCOUNT_ID, TEST_ACCOUNT_DTO_ONE.getId()))).withSelfRel(),
-                  linkTo(methodOn(TransactionController.class).getAllTransactions(Collections.emptyMap())).withRel(ALL_TRANSACTIONS_BETWEEN));
-
+              linkTo(
+                      methodOn(TransactionController.class)
+                          .getAllTransactions(
+                              Map.of(SOURCE_ACCOUNT_ID, TEST_ACCOUNT_DTO_ONE.getId())))
+                  .withSelfRel(),
+              linkTo(
+                      methodOn(TransactionController.class)
+                          .getAllTransactions(Collections.emptyMap()))
+                  .withRel(ALL_TRANSACTIONS_BETWEEN));
 
   public static final CollectionModel<EntityModel<TransactionDto>>
       TEST_ENTITY_MODEL_COLLECTION_MODEL_TO_ACCOUNT_TWO =
@@ -277,18 +322,33 @@ public final class TestConstants {
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_ONE,
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_TWO,
                   TEST_TRANSACTION_DTO_ENTITY_MODEL_FOUR),
-                  linkTo(methodOn(TransactionController.class).getAllTransactions(Map.of(TARGET_ACCOUNT_ID, TEST_ACCOUNT_DTO_TWO.getId()))).withSelfRel(),
-                  linkTo(methodOn(TransactionController.class).getAllTransactions(Collections.emptyMap())).withRel(ALL_TRANSACTIONS_BETWEEN));
-
+              linkTo(
+                      methodOn(TransactionController.class)
+                          .getAllTransactions(
+                              Map.of(TARGET_ACCOUNT_ID, TEST_ACCOUNT_DTO_TWO.getId())))
+                  .withSelfRel(),
+              linkTo(
+                      methodOn(TransactionController.class)
+                          .getAllTransactions(Collections.emptyMap()))
+                  .withRel(ALL_TRANSACTIONS_BETWEEN));
 
   public static final CollectionModel<EntityModel<TransactionDto>>
       TEST_ENTITY_MODEL_COLLECTION_MODEL_FROM_ACCOUNT_ONE_TO_ACCOUNT_TWO =
           CollectionModel.of(
-              List.of(
-                  TEST_TRANSACTION_DTO_ENTITY_MODEL_ONE, TEST_TRANSACTION_DTO_ENTITY_MODEL_TWO),
-                  linkTo(methodOn(TransactionController.class).getAllTransactions(Map.of(SOURCE_ACCOUNT_ID, TEST_ACCOUNT_DTO_ONE.getId(),
-                          TARGET_ACCOUNT_ID, TEST_ACCOUNT_DTO_TWO.getId()))).withSelfRel(),
-                  linkTo(methodOn(TransactionController.class).getAllTransactions(Collections.emptyMap())).withRel(ALL_TRANSACTIONS_BETWEEN));
+              List.of(TEST_TRANSACTION_DTO_ENTITY_MODEL_ONE, TEST_TRANSACTION_DTO_ENTITY_MODEL_TWO),
+              linkTo(
+                      methodOn(TransactionController.class)
+                          .getAllTransactions(
+                              Map.of(
+                                  SOURCE_ACCOUNT_ID,
+                                  TEST_ACCOUNT_DTO_ONE.getId(),
+                                  TARGET_ACCOUNT_ID,
+                                  TEST_ACCOUNT_DTO_TWO.getId())))
+                  .withSelfRel(),
+              linkTo(
+                      methodOn(TransactionController.class)
+                          .getAllTransactions(Collections.emptyMap()))
+                  .withRel(ALL_TRANSACTIONS_BETWEEN));
 
   /* Exchange rate Map for mocked CurrencyLedger calls */
 
